1、添加开奖页面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.butter.butterssc.ui.activity.MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_status"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:layout_centerInParent="true"
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,7 +27,15 @@
             android:text="趋势"
             android:textColor="@color/white"
             android:textSize="18sp"/>
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/iv_info"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_account_circle_black_24dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+    </RelativeLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
