--- a/app/src/main/res/layout/item_home_lottery.xml
+++ b/app/src/main/res/layout/item_home_lottery.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
@@ -66,7 +66,7 @@
                         android:textSize="16sp"/>
 
                     <TextView
-                        android:id="@+id/tv_odd_number"
+                        android:id="@+id/tv_odd_number_h"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="20171228-053"
@@ -109,7 +109,7 @@
                     android:padding="5dp">
 
                     <TextView
-                        android:id="@+id/tv_lottery_number"
+                        android:id="@+id/tv_lottery_number_h"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -139,15 +139,15 @@
                         android:layout_height="wrap_content"
                         android:text="开奖时间："
                         android:textColor="@color/ub_gray_a"
-                        android:textSize="14sp"/>
+                        android:textSize="12sp"/>
 
                     <TextView
-                        android:id="@+id/tv_time"
+                        android:id="@+id/tv_time_h"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2017-12-28 14:40:40"
                         android:textColor="@color/ub_gray_a"
-                        android:textSize="14sp"/>
+                        android:textSize="12sp"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
