--- a/app/src/main/res/layout/view_lottery.xml
+++ b/app/src/main/res/layout/view_lottery.xml
@@ -5,4 +5,9 @@
               android:background="@color/mdWhite"
               android:orientation="vertical">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rc_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
