--- a/app/src/main/res/layout/activity_trend_detail.xml
+++ b/app/src/main/res/layout/activity_trend_detail.xml
@@ -17,7 +17,7 @@
             android:id="@+id/ll_status_t"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorMain"
+            android:background="@color/colorRedMain"
             >
 
             <TextView
