--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#b8152d</color>
     <color name="colorPrimaryDark">#b8152d</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorMain">#b8152d</color>
-
+    <color name="colorMain">#7CCD7C</color>
+    <color name="colorRedMain">#b8152d</color>
 
     <color name="ub_gray">#b5b5b5</color>
     <color name="ub_gray_a">#696969</color>
@@ -24,7 +24,7 @@
     <color name="transparent">#00000000</color>
     <color name="ivory">#fffff0</color><!--象牙色 -->
     <color name="lightyellow">#ffffe0</color><!--亮黄色 -->
-    <color name="yellow">#ffff00</color><!--黄色 -->
+    <color name="yellow">#ffce42</color><!--黄色 -->
     <color name="snow">#fffafa</color><!--雪白色 -->
     <color name="floralwhite">#fffaf0</color><!--花白色 -->
     <color name="lemonchiffon">#fffacd</color><!--柠檬绸色 -->
@@ -54,7 +54,7 @@
     <color name="red">#ff0000</color><!--红色 -->
     <color name="oldlace">#fdf5e6</color><!--老花色 -->
     <color name="lightgoldenrodyellow">#fafad2</color><!--亮金黄色 -->
-    <color name="linen">#faf0e6</color><!--亚麻色 -->
+    <color name="linen">#dfe3ea</color><!--亚麻色 -->
     <color name="antiquewhite">#faebd7</color><!--古董白 -->
     <color name="salmon">#fa8072</color><!--鲜肉色 -->
     <color name="ghostwhite">#f8f8ff</color><!--幽灵白 -->
@@ -161,7 +161,7 @@
     <color name="teal">#008080</color><!--水鸭色 -->
     <color name="green">#008000</color><!--绿色 -->
     <color name="darkgreen">#006400</color><!--暗绿色 -->
-    <color name="blue">#0000ff</color><!--蓝色 -->
+    <color name="blue">#3b98ff</color><!--蓝色 -->
     <color name="mediumblue">#0000cd</color><!--中兰色 -->
     <color name="darkblue">#00008b</color><!--暗蓝色 -->
     <color name="navy">#000080</color><!--海军色 -->
