--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,7 +93,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开彩专家宝典v1.10"/>
+                android:text="快三专业分析v1.10"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
