--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@mipmap/bg_splash_1080"
+             android:background="@mipmap/bg_splash_1080_a"
              tools:context="com.butter.butterssc.ui.activity.SplashActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
