--- a/app/src/main/res/layout/item_lottery_info.xml
+++ b/app/src/main/res/layout/item_lottery_info.xml
@@ -32,7 +32,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="开奖期号："
+                    android:text="期号："
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -63,7 +63,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="开奖号码"
+                    android:text="号码"
                     android:textColor="@color/ub_gray"
                     android:textSize="16sp"/>
 
@@ -113,7 +113,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="开奖时间："
+                    android:text="时间："
                     android:textColor="@color/ub_gray_a"
                     android:textSize="12sp"/>
 
